# research-radar

./: .gitignore  Cargo.toml  ROADMAP.md  SETUP.md
.council/design-a-data-layer-implementation--the-data-layer-is-a-shared-s/: build-plan-round3.md  stage0-framing-prompt.txt  stage0-framing.md  stage0-framing.stderr  stage3-handoff-prompt.txt  task.txt
.council/design-a-data-layer-implementation--the-data-layer-is-a-shared-s/stage1-brainstorm/: claude-contribute-prompt.txt  claude-contribute.md  codex-contribute-prompt.txt  codex-contribute.md  codex-contribute.stderr  gemini-seed-prompt.txt  gemini-seed.md  gemini-seed.stderr  gemini-synthesis-prompt.txt  gemini-synthesis.md
.council/design-a-data-layer-implementation--the-data-layer-is-a-shared-s/stage2-round1/: claude-critique-prompt.txt  claude-critique.json  claude-critique.md  codex-revision-prompt.txt  codex-revision.md  codex-revision.stderr  decision-log.json  gemini-critique-prompt.txt  gemini-critique.json  gemini-critique.md
.council/design-a-data-layer-implementation--the-data-layer-is-a-shared-s/stage2-round2/: claude-critique-prompt.txt  claude-critique.json  claude-critique.md  codex-revision-prompt.txt  codex-revision.md  codex-revision.stderr  decision-log.json  gemini-critique-prompt.txt  gemini-critique.json  gemini-critique.md  gemini-critique.stderr
crates/radar-cli/: Cargo.toml
crates/radar-cli/src/: main.rs
crates/radar-core/: Cargo.toml
crates/radar-core/src/: embedding.rs  error.rs  executor.rs  filter.rs  lib.rs  notify.rs  pipeline.rs  ranking.rs  scorer.rs  types.rs  vector.rs
crates/radar-core/src/db/: mod.rs  schema.rs  store.rs
crates/radar-core/src/source/: arxiv.rs  mod.rs
crates/radar-core/src/types/: evaluation.rs  item.rs  job.rs  notification.rs  profile.rs  source.rs  subscription.rs  watermark.rs
crates/radar-core/tests/: phase1_pipeline.rs
crates/radar-mcp/: Cargo.toml
crates/radar-mcp/src/: main.rs
crates/research-radar-core/: Cargo.toml
crates/research-radar-core/src/: arxiv.rs  embedding.rs  evaluate.rs  executor.rs  feedback.rs  finding.rs  github.rs  lib.rs  notify.rs  openalex.rs  pricing.rs  prove_it.rs  publish.rs  rustsec.rs  score.rs  scorer.rs  semantic_scholar.rs  storage.rs  triumvirate.rs
crates/research-radar-core/tests/fixtures/: research_finding_canonical.json
runs/sessions/: code-20260628T142439Z-39f4f620.json  code-20260628T190415Z-1760927e.json
scripts/: install-daemon.sh
src/: Cargo.toml  main.rs  mcp_server.rs
src/tests/: pipeline_integration.rs
