[package]
name = "research-radar"
edition.workspace = true
version.workspace = true

[[bin]]
name = "research-radar"
path = "main.rs"

[dependencies]
research-radar-core = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rusqlite = { workspace = true }
tempfile = "3"
