[package]
name = "radar-cli"
edition.workspace = true
version.workspace = true

[dependencies]
radar-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = "6"
