[package]
name = "radar-mcp"
edition.workspace = true
version.workspace = true

[dependencies]
radar-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }

[[bin]]
name = "radar-mcp"
path = "src/main.rs"
