[package]
name = "research-radar-core"
edition.workspace = true
version.workspace = true

[dev-dependencies]
tempfile = "3"

[dependencies]
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
